--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -38,6 +38,10 @@ background = "#4c566a"
 foreground = "CellBackground"
 background = "#88c0d0"
 
+[colors.footer_bar]
+background = "#434c5e"
+foreground = "#d8dee9"
+
 [colors.normal]
 black = "#3b4252"
 red = "#bf616a"
