fix: tmux true color

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,7 @@
 # Fix the colors in the terminal
-set -sa terminal-overrides ",xterm*:Tc"
+set -g default-terminal "$TERM"
+set -ag terminal-overrides ",$TERM:Tc"
+#set -sa terminal-overrides ",xterm*:Tc"
 
 # Set the leader key
 #unbind-key C-b
