--- a/dotfiles/home/git/.gitconfig
+++ b/dotfiles/home/git/.gitconfig
@@ -1,8 +1,9 @@
 [user]
 	name = Levente Berky
 	email = levente.berky@gmail.com
+  signingkey = /home/levente/.ssh/id_ed25519.pub
 [core]
-	editor = nvim
+	editor = vi
 [push]
 	default = simple
 [alias]
@@ -16,3 +17,8 @@
 	defaultBranch = main
 [pull]
 	rebase = true
+
+[gpg]
+  format = ssh
+[commit]
+  gpgsign = true
