--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,6 +1,7 @@
 [user]
 	name = Levente Berky
 	email = levente.berky@gmail.com
+	signingkey = /home/brum/.ssh/id_ed25519.pub
 [core]
 	editor = nvim
 [push]
@@ -16,3 +17,7 @@
 	defaultBranch = main
 [pull]
 	rebase = true
+[gpg]
+	format = ssh
+[commit]
+  gpgsign = true
