--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,6 +7,7 @@ set -ag terminal-overrides ",$TERM:Tc"
 #unbind-key C-b
 #set-option -g prefix C-g
 #bind-key C-g send-prefix
+set -g mouse on
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
