--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,7 +1,7 @@
 [user]
 	name = Levente Berky
 	email = levente.berky@gmail.com
-	signingkey = /home/brum/.ssh/id_ed25519.pub
+	signingkey = ~/.ssh/id.pub
 [core]
 	editor = nvim
 [push]
