--- a/dotfiles/home/git/.gitconfig
+++ b/dotfiles/home/git/.gitconfig
@@ -1,7 +1,7 @@
 [user]
 	name = Levente Berky
 	email = levente.berky@gmail.com
-  signingkey = ~/.ssh/id.pub
+  signingkey = ~/.ssh/id_ed25519.pub
 [core]
 	editor = vi
 [push]
