--- a/dotfiles/home/git/.gitconfig
+++ b/dotfiles/home/git/.gitconfig
@@ -22,3 +22,7 @@
   format = ssh
 [commit]
   gpgsign = true
+
+# Make sure that when programs want to pull from git they do with my ssh
+[url "git@github.com:"]
+  insteadOf = https://github.com/
