--- a/dotfiles/home/alacritty/alacritty.yml
+++ b/dotfiles/home/alacritty/alacritty.yml
@@ -3,20 +3,20 @@ env:
 
 font:
   normal:
-    family: UbuntuMono Nerd Font
+    family: JetBrainsMono Nerd Font
     style: Regular
   bold:
-    family: UbuntuMono Nerd Font
+    family: JetBrainsMono Nerd Font
     style: Bold
   italic:
-    family: UbuntuMono Nerd Font
+    family: JetBrainsMono Nerd Font
     style: Italic
   bold_italic:
-    family: UbuntuMono Nerd Font
+    family: JetBrainsMono Nerd Font
     style: Bold Italic
 
   # Point size
-  size: 16.0
+  size: 14.0
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
@@ -29,7 +29,8 @@ window:
   decorations: "None"
   padding:
     x: 5
-    y: 5
+    y: 0
+  dynamic_padding: true
 
 # nord color palette
 colors:
