Update the spotdl config and adding own api keyr

--- a/home/spotdl/config.json
+++ b/home/spotdl/config.json
@@ -1,13 +1,12 @@
 {
-    "client_id": "5f573c9620494bae87890c0f08a60293",
-    "client_secret": "212476d9b0f3472eaa762d90b19b0ba8",
+    "client_id": "f15ce49a56da4060a4771bffe6df5621",
+    "client_secret": "e83f545fdcda4aeeb01842074c0f2150",
     "auth_token": null,
     "user_auth": false,
     "headless": false,
     "cache_path": "~/.spotdl/.spotipy",
-    "no_cache": false,
+    "no_cache": true,
     "max_retries": 3,
-    "use_cache_file": false,
     "audio_providers": [
         "youtube-music"
     ],
@@ -18,8 +17,8 @@
     ],
     "playlist_numbering": true,
     "scan_for_songs": false,
-    "m3u": null,
-    "output": "{album-artist}/{album}/{album-artist} - {album} - {track-number} {title}.{output-ext}",
+    "m3u": false,
+    "output": "{artist}/{album}/{artist} - {album} - {track-number} {title}.{output-ext}",
     "overwrite": "skip",
     "search_query": null,
     "ffmpeg": "ffmpeg",
@@ -28,7 +27,8 @@
     "format": "mp3",
     "save_file": null,
     "filter_results": true,
-    "threads": 4,
+    "album_type": null,
+    "threads": 8,
     "cookie_file": null,
     "restrict": null,
     "print_errors": false,
@@ -38,27 +38,18 @@
     "load_config": true,
     "log_level": "INFO",
     "simple_tui": false,
-    "fetch_albums": false,
+    "fetch_albums": true,
     "id3_separator": "/",
     "ytm_data": false,
     "add_unavailable": false,
     "generate_lrc": false,
     "force_update_metadata": false,
-    "only_verified_results": false,
-    "sync_without_deleting": false,
-    "max_filename_length": null,
-    "yt_dlp_args": null,
-    "detect_formats": null,
-    "save_errors": null,
-    "ignore_albums": null,
-    "proxy": null,
-    "skip_explicit": false,
-    "log_format": null,
-    "redownload": false,
     "web_use_output_dir": false,
     "port": 8800,
     "host": "localhost",
     "keep_alive": false,
     "allowed_origins": null,
-    "keep_sessions": false
+    "keep_sessions": false,
+    "only_verified_results": false,
+    "skip_album_art": false
 }
