Refactor file structure for simpler user edits

--- a/home/modules/terminal/tmux/default-config.toml
+++ b/home/modules/terminal/tmux/default-config.toml
@@ -3,14 +3,14 @@ recursive_submodules = false
 default_session = "home"
 
 [[search_dirs]]
-path = "/home/levente/Documents"
+path = "~/Documents"
 depth = 1
 
 [[search_dirs]]
-path = "/home/levente/config"
+path = "~/config"
 depth = 1
 
 [[search_dirs]]
-path = "/home/levente/Documents/Klara"
+path = "~/Documents/Klara"
 depth = 1
 
