--- a/non-nix/stow/.config/kitty/kitty.conf
+++ b/non-nix/stow/.config/kitty/kitty.conf
@@ -1,4 +1,4 @@
-# vim:fileencoding=utf-8:foldmethod=marker
+√# vim:fileencoding=utf-8:foldmethod=marker
 
 #: Fonts {{{
 
@@ -2644,3 +2644,10 @@ font_size 18.0
 # Everforest Dark Hard
 include current-theme.conf
 # END_KITTY_THEME
+
+# BEGIN_KITTY_FONTS
+font_family      family="JetBrainsMono Nerd Font Mono"
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+# END_KITTY_FONTS
