add klaragh to config

--- a/non-nix/stow/.ssh/config
+++ b/non-nix/stow/.ssh/config
@@ -9,6 +9,13 @@ Host github.com
   User git
   IdentityFile ~/.ssh/id_ed25519 
 
+# Account for github.com/klara organization
+Host klaragithub
+  AddKeysToAgent yes
+  HostName github.com
+  User git
+  IdentityFile ~/.ssh/id_ed25519
+
 # Account for github.com/modmed organization
 Host mmgithub
   AddKeysToAgent yes
