--- a/non-nix/stow/.ssh/config
+++ b/non-nix/stow/.ssh/config
@@ -5,6 +5,7 @@ Host *
 
 # Default GitHub Account (for all other repos)
 Host github.com
+  AddKeysToAgent yes
   HostName github.com
   User git
   IdentityFile ~/.ssh/id_ed25519 
