--- a/non-nix/media_helpers/abcde.conf
+++ b/non-nix/media_helpers/abcde.conf
@@ -426,7 +426,7 @@ VAONETRACKOUTPUTFORMAT=$VAOUTPUTFORMAT
 
 # Define how many encoders to run at once. This makes for huge speedups
 # on SMP systems. Defaults to 1. Equivalent to -j.
-MAXPROCS=4
+MAXPROCS=8
 
 # Support for systems with low disk space:
 # n:	Default parallelization (read entire CD in while encoding)
@@ -605,7 +605,7 @@ mungealbumname ()
 
 # If you'd like to have abcde eject the cdrom after all the tracks have been
 # read, uncomment the following line.
-#EJECTCD=y
+EJECTCD=y
 
 # To encode on the remote machines foo, bar, baz, quux, and qiix, as well as
 # on the local machine (requires distmp3 to be installed on local machine and
